--- a/demo.html
+++ b/demo.html
@@ -10,5 +10,6 @@
 <body>
     <h1>New line added   step1 </h1>
     <h1>New line added   step2 </h1>
+    <h2> 3rd line added </h2>
 </body>
 </html>
