--- a/demo.html
+++ b/demo.html
@@ -11,5 +11,6 @@
     <h1>New line added   step1 </h1>
     <h1>New line added   step2 </h1>
     <h2> 3rd line added </h2>
+    <h2> 4th line added </h2>
 </body>
 </html>
